tests/passes/well-formed/ref-invoke-unmentioned.expect
---CODE---
1
---STDERR---
Error: tests/passes/well-formed/ref-invoke-unmentioned.futil
32 |      invoke f()();
   |      ^^^^^^^^^^^^^ Malformed Control: unmentioned ref cell: m
